<resources>
    <string name="app_name">MeteoDuo</string>

    <!-- *****  Login_activity  ***** -->
    <!-- Login -->
    <string name="login_title">MeteoDuo</string>
    <string name="email_hint">Correo electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="login_button">Entrar</string>
    <string name="go_to_register">No tengo cuenta. Registrarme</string>

    <!-- Errores -->
    <string name="error_email">Introduce un correo válido</string>
    <string name="error_password">Contraseña mínima 6 caracteres</string>
    <string name="error_login">Correo electrónico o contraseña incorrectos</string>


    <!-- Mensajes -->
    <string name="login_ok">Inicio de sesión correcto</string>

    <!-- *****  register_activity  ***** -->


    <string name="register_button">Crear cuenta</string>
    <string name="go_to_login">Ya tengo cuenta. Iniciar sesión</string>
    <string name="repeat_password">Repetir contraseña</string>

    <string name="register_ok">Cuenta creada correctamente</string>
    <string name="error_password_repeat">Las contraseñas no coinciden</string>

    <!-- *****  activity- usuario/ admisnitrador  ***** -->

    <string name="consulta_button">CONSULTAR PREDICCIÓN</string>
    <string name="historial_button">MI HISTORIAL</string>
    <string name="closed_sesion">Cerrar sesión</string>
    <string name="setting">Ajustes</string>;
    <string name="avatar">Avatar</string>
    <string name="nombre_usuario">Nombre</string>
    <string name="frase">“El tiempo cambia, tú decides cómo afrontarlo.”</string>
    <string name="admisnitrador">Cuenta de admisnitrador</string>
    <string name="bton_admisnitrador">CONSULTAR APP</string>


    <!-- *****  activity- busqueda  ***** -->

    <string name="tu_destino">ELIGE TU DESTINO</string>
    <string name="punto_a">PUNTO A</string>
    <string name="punto_b">PUNTO B</string>
    <string name="provincia">Provincia</string>
    <string name="municipio">Municipio </string>
    <string name="autocomplete">Escriba la provincia</string>
    <string name="autocompletem">Escriba el municipio</string>
    <string name="look_button">BUSCAR</string>
    <string name="back_button" >VOLVER</string>
    <string name="btneliminar">Eliminar</string>
    <string name="btonvolver">Volver</string>
    <string name="titulohistorial">HISTORIAL</string>
    <string name="detalle_app">Detalle App</string>
    <string name="dia">DÍA</string>
    <string name="hora">HORA</string>
    <string name="usuario">USUARIO</string>
    <string name="error">ERROR</string>
    <string name="guardar">Guardar</string>
    <string name="salir">Salir</string>
    <string name="lluvia">Lluvia</string>
    <string name="cielo">Cielo</string>
    <string name="viento">Viento</string>
    <string name="mostrar_ocultar">Mostrar_Ocultar</string>
    <string name="unidad_temperatura">Unidad temperatura</string>
    <string name="ajustes">Ajustes</string>
    <string name="volver">Volver</string>
    <string name="dd_mm_yyyy_a_dd_mm_yyyy">dd/MM/yyyy a dd/MM/yyyy</string>
    <string name="municipio_provincia_municipio_provincia">Municipio (Provincia) - Municipio (Provincia)</string>
    <string name="resultados">RESULTADOS</string>
    <string name="mensaje">Mensaje</string>
    <string name="siguiente">Siguiente</string>
    <string name="temp_max">Temp Max</string>
    <string name="temp_min">Temp Min</string>
    <string name="precipitacion">Precipitación</string>


</resources>