<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- ============================== -->
    <!--FONDO DE PANTALLA-->
    <!-- ============================== -->
    <ImageView
        android:id="@+id/bgapp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.8"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/textura"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- ============================== -->
    <!--TITULO-->
    <!-- ============================== -->

    <!-- ============================== -->
    <!--CABECERA TABLA->
    <!- ============================== -->
    <TextView
        android:id="@+id/tvTituloapp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/detalle_app"
        android:textColor="@color/boton"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/headerTabla"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:padding="10dp"
        android:orientation="horizontal"
        android:background="@drawable/fondo_resultados"
        app:layout_constraintTop_toBottomOf="@id/tvTituloapp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:text="@string/dia"
            android:textStyle="bold"
            android:textColor="@color/text"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:text="@string/hora"
            android:textStyle="bold"
            android:textColor="@color/text"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.6"
            android:text="@string/usuario"
            android:textStyle="bold"
            android:textColor="@color/text"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:text="@string/error"
            android:textStyle="bold"
            android:textColor="@color/text"/>
    </LinearLayout>

    <!-- ============================== -->
    <!--CONTENEDOR BOTONES VOLVER Y ELIMINAR-->
    <!-- ============================== -->
    <LinearLayout
        android:id="@+id/llBotones"
        android:layout_width="390dp"
        android:layout_height="169dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnVolverApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/boton"
            android:text="@string/btonvolver" />

        <Button
            android:id="@+id/btnEliminarApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/boton"
            android:text="@string/btneliminar" />
    </LinearLayout>

    <!-- ============================== -->
    <!--LISTADO-->
    <!-- ============================== -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvApp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/headerTabla"
        app:layout_constraintBottom_toTopOf="@id/llBotones"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
