<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- FONDO -->


    <!-- CUADRO DE TEXTO EMAIL -->

    <ImageView
        android:id="@+id/bg"
        android:layout_width="432dp"
        android:layout_height="792dp"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/meteo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.508" />

    <EditText

        android:backgroundTint="@color/black"
        android:backgroundTintMode="src_in"
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="316dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        android:minHeight="48dp"
        android:paddingVertical="12dp"
        android:autofillHints="emailAddress"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintWidth_max="488dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- CUADRO DE TEXTO CONTRASEÑA -->
    <EditText
        android:backgroundTint="@color/black"
        android:backgroundTintMode="src_in"
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        android:minHeight="48dp"
        android:paddingVertical="12dp"
        android:autofillHints="password"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:maxWidth="488dp"
        app:layout_constraintWidth_max="488dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail" />

    <!-- BOTON ACCEDER-->
    <Button

        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/login_button"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintWidth_max="320dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:backgroundTint="@color/boton" />



    <!--ENLACE PARA CREAR CUENTA-->

    <TextView
        android:id="@+id/tvIrRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/go_to_register"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>
